force-app/main/default/objects/AO_Applicant_Email__c.object
<CustomObject>
    <fields>
        <fullName>AO_Business_Unit__c</fullName>
        <description>Indicates the business unit derived from the program</description>
        <formula>AO_Program_Applicant__r.AO_Program__r.Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applicant Emails</relationshipLabel>
        <relationshipName>Applicant_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Email_Body__c</fullName>
        <description>Contains the Rendered Email content that will be sent to the applicant.

Used by SFMC to send automated comms</description>
        <inlineHelpText>Contains the Rendered Email content that will be sent to the applicant.</inlineHelpText>
        <label>Email Body</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AO_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the email was sent to the applicant</description>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AO_Email_Subject__c</fullName>
        <description>Contains the Subject line of the email to be sent to the applicant</description>
        <label>Email Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AO_Program_Applicant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program Applicant</label>
        <referenceTo>AO_Program_Applicant__c</referenceTo>
        <relationshipLabel>Applicant Emails</relationshipLabel>
        <relationshipName>Applicant_Emails</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Recipient_Email_Address_Type__c</fullName>
        <description>Indicates the email address type that this email will be sent to</description>
        <label>Recipient&apos;s Email Address Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Recipient_Email_Address__c</fullName>
        <label>Recipient Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient_Email_Address__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Indicates the email address of the recipient</description>
        <formula>CASE( AO_Recipient_Email_Address_Type__c ,&quot;Students&quot;,  IF( AO_Contact__r.Monash_Email_Address__c != null, AO_Contact__r.Monash_Email_Address__c, AO_Contact__r.Email)  ,&quot;Finance&quot;,$Setup.AO_Abroad_Settings__c.Finance_Team_Email__c ,&quot;&quot;)</formula>
        <label>Recipient Email Address</label>
        <type>Text</type>
    </fields>
    <label>Applicant Email</label>
    <nameField>
        <displayFormat>ApplicantEmail-{000000000}</displayFormat>
        <label>Applicant Emails Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>